[feat] : Cache no método de buscar todas as stores, retornando uma coleção, ao invés de lista, o que impedia deu retornar um objeto desserializado